# pirat_AI

./: .dockerignore  .env.example  .gitignore  CLOUDFLARE_DEPLOYMENT.md  DEPLOY_CLOUDFLARE.sh  DEPLOY_QUICK.sh  DOCKER.md  DOCKER_QUICK_START.md  DOCKER_RECOMMENDATIONS.md  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  SCORING_AND_LANGGRAPH.md  SETUP.md  SYSTEM_FLOW.md  docker-compose.prod.yml  docker-compose.yml  fly.toml.example  pyproject.toml  railway.json  requirements.txt  test-docker.sh
backend/: config.py  main.prod.py.example
backend/graph/: conversation.py
backend/services/: merit_check.py  pirate_service.py  validation.py
frontend/: app.py
